# automatic-ripping-machine

./: .gitignore  README.md  flake.nix  pyproject.toml
arm/: runui.py
arm/migrations/: env.py
arm/migrations/versions/: 6dfe7244b18e_.py  9cae4aa05dd7_create_settingsui_table.py  c3a3fa694636_.py  c54d68996895_.py  e688fe04d305_.py
arm/models/: models.py
arm/ripper/: apprise_bulk.py  getkeys.py  handbrake.py  identify.py  logger.py  makemkv.py  music_brainz.py  utils.py
arm/ui/: __init__.py  forms.py  routes.py  utils.py
nix/: arm_wrapper.sh  module.nix
